package demo.martos.blackjack;

public class Blackjack {

    public static void main(String[] args) {
        GameTable gameTable = new GameTable();
        gameTable.playRound();
    }
}
